--- a/openwrt-ci.yml
+++ b/openwrt-ci.yml
@@ -97,16 +97,15 @@ jobs:
           # 
 
           # 编译x64固件:
-          # cat >> .config <<EOF
-          # CONFIG_TARGET_x86=y
-          # CONFIG_TARGET_x86_64=y
-          # CONFIG_TARGET_x86_64_Generic=y
-          # EOF
+          CONFIG_TARGET_ramips=y
+          CONFIG_TARGET_ramips_mt7620=y
+          CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
+           EOF
 
           # 固件压缩:
-          # cat >> .config <<EOF
-          # CONFIG_TARGET_IMAGES_GZIP=y
-          # EOF
+           cat >> .config <<EOF
+           CONFIG_TARGET_IMAGES_GZIP=y
+           EOF
 
           # 编译UEFI固件:
           # cat >> .config <<EOF
@@ -144,8 +143,8 @@ jobs:
           # CONFIG_PACKAGE_luci-app-aria2=y
           # CONFIG_PACKAGE_luci-app-baidupcs-web=y
           # CONFIG_PACKAGE_luci-app-docker=y
-          # CONFIG_PACKAGE_luci-app-frpc=y
-          # CONFIG_PACKAGE_luci-app-kodexplorer=y
+           CONFIG_PACKAGE_luci-app-frpc=y
+           CONFIG_PACKAGE_luci-app-softethervirtual**=y
           # CONFIG_PACKAGE_luci-app-minidlna=y
           # CONFIG_PACKAGE_luci-app-openvpn=y
           # CONFIG_PACKAGE_luci-app-openvpn-server=y
@@ -181,10 +180,10 @@ jobs:
           # EOF
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
-          # cat >> .config <<EOF
-          # # CONFIG_TARGET_IMAGES_PAD is not set
-          # # CONFIG_VMDK_IMAGES is not set
-          # EOF
+           cat >> .config <<EOF
+           # CONFIG_TARGET_IMAGES_PAD is not set
+           # CONFIG_VMDK_IMAGES is not set
+           EOF
 
           # 
           # ========================固件定制部分结束========================
